include/glm.h

/*
** == Errors & Debugging ==
*/

/* Register functions for events */
void at_error(void(*func)(const char*));
void at_warning(void(*func)(const char*));
void at_debug(void(*func)(const char*));
/*
** == Vector Maths ==
*/

/* vec2 */

typedef struct {
  float x;
  float y;
} vec2;
/* vec3 */

typedef struct {
  float x;
  float y;
  float z;
} vec3;
/* vec4 */

typedef struct {
  float x;
  float y;
  float z;
  float w;
} vec4;
/* quaterion */

typedef vec4 quat;
quat quat_id();
quat quat_new(float x, float y, float z, float w);
quat quat_from_euler(vec3 r);
quat quat_angle_axis(float angle, vec3 axis);
quat quat_rotation_x(float angle);
quat quat_rotation_y(float angle);
quat quat_rotation_z(float angle);
float quat_at(quat q, int i);
float quat_real(quat q);
vec3 quat_imaginaries(quat q);
void quat_to_angle_axis(quat q, vec3* axis, float* angle);
vec3 quat_to_euler(quat q);
quat quat_neg(quat q);
float quat_dot(quat q1, quat q2);
quat quat_scale(quat q, float f);
quat quat_mul_quat(quat q1, quat q2);
vec3 quat_mul_vec3(quat q, vec3 v);
quat quat_inverse(quat q);
quat quat_unit_inverse(quat q);
float quat_length(quat q);
quat quat_normalize(quat q);
quat quat_exp(vec3 w);
vec3 quat_log(quat q);
quat quat_slerp(quat q1, quat q2, float amount);
quat quat_constrain(quat q, vec3 axis);
quat quat_constrain_y(quat q);
float quat_distance(quat q0, quat q1);
quat quat_interpolate(quat* qs, float* ws, int count);
typedef struct {
  quat real;
  quat dual;
} quat_dual;
quat_dual quat_dual_id();
quat_dual quat_dual_new(quat real, quat dual);
quat_dual quat_dual_transform(quat q, vec3 t);
quat_dual quat_dual_mul(quat_dual q0, quat_dual q1);
vec3 quat_dual_mul_vec3(quat_dual q, vec3 v);
vec3 quat_dual_mul_vec3_rot(quat_dual q, vec3 v);
/*
** == Matrix Maths ==
*/

/* mat2 */

typedef struct {
  float xx; float xy;
  float yx; float yy;
} mat2;
mat2 mat2_id();
mat2 mat2_zero();
mat2 mat2_new(float xx, float xy, float yx, float yy);
mat2 mat2_mul_mat2(mat2 m1, mat2 mat2);
vec2 mat2_mul_vec2(mat2 m, vec2 v);
mat2 mat2_transpose(mat2 m);
float mat2_det(mat2 m);
mat2 mat2_inverse(mat2 m);
void mat2_to_array(mat2 m, float* out);
void mat2_print(mat2 m);
mat2 mat2_rotation(float a);
/* mat3 */

typedef struct {
  float xx; float xy; float xz;
  float yx; float yy; float yz;
  float zx; float zy; float zz;
} mat3;
mat3 mat3_id();
mat3 mat3_zero();
mat3 mat3_new(float xx, float xy, float xz,
              float yx, float yy, float yz,
              float zx, float zy, float zz);
mat3 mat3_mul_mat3(mat3 m1, mat3 mat2);
vec3 mat3_mul_vec3(mat3 m, vec3 v);
mat3 mat3_transpose(mat3 m);
float mat3_det(mat3 m);
mat3 mat3_inverse(mat3 m);
void mat3_to_array(mat3 m, float* out);
void mat3_print(mat3 m);
mat3 mat3_scale(vec3 s);
mat3 mat3_rotation_x(float a);
mat3 mat3_rotation_y(float a);
mat3 mat3_rotation_z(float a);
mat3 mat3_rotation_angle_axis(float angle, vec3 axis);
/* mat4 */

typedef struct {
  float xx; float xy; float xz; float xw;
  float yx; float yy; float yz; float yw;
  float zx; float zy; float zz; float zw;
  float wx; float wy; float wz; float ww;
} mat4;
mat4 mat4_id();
mat4 mat4_zero();
mat4 mat4_new(float xx, float xy, float xz, float xw,
              float yx, float yy, float yz, float yw,
              float zx, float zy, float zz, float zw,
              float wx, float wy, float wz, float ww);
float mat4_at(mat4 m, int i, int j);
mat4 mat4_set(mat4 m, int x, int y, float v);
mat4 mat4_transpose(mat4 m);
mat4 mat4_mul_mat4(mat4 m1, mat4 mat2);
vec4 mat4_mul_vec4(mat4 m, vec4 v);
vec3 mat4_mul_vec3(mat4 m, vec3 v);
float mat4_det(mat4 m);
mat4 mat4_inverse(mat4 m);
mat4 mat3_to_mat4(mat3 m);
mat3 mat4_to_mat3(mat4 m);
quat mat4_to_quat(mat4 m);
quat_dual mat4_to_quat_dual(mat4 m);
void mat4_to_array(mat4 m, float* out);
void mat4_to_array_trans(mat4 m, float* out);
void mat4_print(mat4 m);
mat4 mat4_translation(vec3 v);
mat4 mat4_scale(vec3 v);
mat4 mat4_rotate(mat4 m, float a);
mat4 mat4_translate(mat4 m, vec3 v);
mat4 mat4_rotation_x(float a);
mat4 mat4_rotation_y(float a);
mat4 mat4_rotation_z(float a);
mat4 mat4_rotation_axis_angle(vec3 axis, float angle);
mat4 mat4_rotation_euler(float x, float y, float z);
mat4 mat4_rotation_quat(quat q);
mat4 mat4_rotation_quat_dual(quat_dual q);
mat4 mat4_view_look_at(vec3 position, vec3 target, vec3 up);
mat4 mat4_perspective(float fov, float near_clip, float far_clip, float ratio);
mat4 mat4_orthographic(float left, float right, float bottom, float top, float near, float far);
mat4 mat4_world(vec3 position, vec3 scale, quat rotation);
mat4 mat4_lerp(mat4 m1, mat4 mat2, float amount);
mat4 mat4_smoothstep(mat4 m1, mat4 mat2, float amount);