lessons/glm.vapi


		[CCode (cname = "quat_new")]
		public quat (float x, float y, float z, float w);
		[CCode (cname = "quat_id")]
		public static quat Identity();
		[CCode (cname = "quat_from_euler")]
		public static quat FromEuler(vec3 r);
		[CCode (cname = "quat_angle_axis")]
		public static quat AngleAxis(float angle, vec3 axis);
		[CCode (cname = "quat_rotation_x")]
		public static quat RotationX(float angle);
		[CCode (cname = "quat_rotation_y")]
		public static quat RotationY(float angle);
		[CCode (cname = "quat_rotation_z")]
		public static quat RotationZ(float angle);
		
		[CCode (cname = "quat_at")]
		public float At(int i);
		[CCode (cname = "quat_real")]
		public float Real();
		[CCode (cname = "quat_imaginaries")]
		public vec3 Imaginaries();
		
		[CCode (cname = "quat_to_angle_axis")]
		public void ToAngleAxis(ref vec3 axis, ref float angle);
		[CCode (cname = "quat_to_euler")]
		public vec3 ToEuler();
		
		[CCode (cname = "quat_neg")]
		public quat Neg();
		[CCode (cname = "quat_dot")]
		public float Dot(quat other);
		[CCode (cname = "quat_scale")]
		public quat Scale(float f);
		[CCode (cname = "quat_mul_quat")]
		public quat Mul(quat other);
		[CCode (cname = "quat_mul_vec3")]
		public vec3 MulVec3(vec3 v);
		
		[CCode (cname = "quat_inverse")]
		public quat Inverse();
		[CCode (cname = "quat_unit_inverse")]
		public quat UnitInverse();
		[CCode (cname = "quat_length")]
		public float Length();
		[CCode (cname = "quat_normalize")]
		public quat Normalize();
		
		[CCode (cname = "quat_exp")]
		public quat Exp(vec3 w);
		[CCode (cname = "quat_log")]
		public vec3 Log();
		
		[CCode (cname = "quat_slerp")]
		public quat SLerp(quat other, float amount);
		
		[CCode (cname = "quat_constrain")]
		public quat Constrain(vec3 axis);
		[CCode (cname = "quat_constrain_y")]
		public quat ConstrainY();
		
		[CCode (cname = "quat_distance")]
		public float Distance(quat other);
		[CCode (cname = "quat_interpolate")]
		public quat Interpolate(ref quat other, ref float ws, int count);
	}
	
	[SimpleType, CCode (cname = "quat_dual")]
	public struct dquat 
	{
		[CCode (cname = "real")]
		public quat Real;
		[CCode (cname = "dual")]
		public quat Dual;

		[CCode (cname = "quat_dual_new")]
		public dquat (dquat real, dquat dual);
		[CCode (cname = "quat_dual_id")]
		public static dquat Identity();
		[CCode (cname = "quat_dual_transform")]
		public static dquat Transform(quat q, vec3 t);
		[CCode (cname = "quat_dual_mul")]
		public dquat Mul(dquat q1);
		[CCode (cname = "quat_dual_mul_vec3")]
		public vec3 MulVec3(vec3 v);
		[CCode (cname = "quat_dual_mul_vec3_rot")]
		public vec3 MulVec3Rot(vec3 v);
	}
	
	[SimpleType, CCode (cname = "mat2")]
	public struct mat2 
	{
		[CCode (cname = "xx")]
		public float M11; 
		[CCode (cname = "xy")]
		public float M12;
		[CCode (cname = "yx")]
		public float M21; 
		[CCode (cname = "yy")]
		public float M22;

		[CCode (cname = "mat2_new")]
		public mat2 (float m11, float m12, float m21, float m22);
		[CCode (cname = "mat2_id")]
		public static mat2 Identity();
		[CCode (cname = "mat2_zero")]
		public static mat2 Zero();

		[CCode (cname = "mat2_mul_mat2")]
		public mat2 Mul(mat2 other);
		[CCode (cname = "mat2_mul_vec2")]
		public vec2 MulVec2(vec2 other);
		[CCode (cname = "mat2_transpose")]
		public mat2 Transpose();
		[CCode (cname = "mat2_det")]
		public float Det();
		[CCode (cname = "mat2_inverse")]
		public mat2 Inverse();
		[CCode (cname = "mat2_to_array")]
		public void ToArray(ref float result);
		[CCode (cname = "mat2_print")]
		public void Print();
		[CCode (cname = "mat2_rotation")]
		public mat2 Rotation(float a);
	}


	[SimpleType, CCode (cname = "mat3")]
	public struct mat3 
	{
		[CCode (cname = "xx")]
		public float M11; 
		[CCode (cname = "xy")]
		public float M12; 
		[CCode (cname = "xz")]
		public float M13;
		[CCode (cname = "yz")]
		public float M21; 
		[CCode (cname = "yy")]
		public float M22; 
		[CCode (cname = "yz")]
		public float M23;
		[CCode (cname = "zx")]
		public float M31; 
		[CCode (cname = "zy")]
		public float M32; 
		[CCode (cname = "zz")]
		public float M33;

		[CCode (cname = "mat3_new")]
		public mat3 (float m11, float m12, float m13,
					float m21, float m22, float m23,
					float m31, float m32, float m33);
		[CCode (cname = "mat3_id")]
		public static mat3 Identity();
		[CCode (cname = "mat3_zero")]
		public static mat3 Zero();
		[CCode (cname = "mat3_scale")]
		public static mat3 Scale(vec3 s);
		[CCode (cname = "mat3_rotation_x")]
		public static mat3 RotationX(float a);
		[CCode (cname = "mat3_rotation_y")]
		public static mat3 RotationY(float a);
		[CCode (cname = "mat3_rotation_z")]
		public static mat3 RotationZ(float a);
		[CCode (cname = "mat3_rotation_angle_axis")]
		public static mat3 RotationAngleAxis(float angle, vec3 axis);

		[CCode (cname = "mat3_mul_mat3")]
		public mat3 Mul(mat3 other);
		[CCode (cname = "mat3_mul_vec3")]
		public vec3 MulVec3(vec3 other);
		
		[CCode (cname = "mat3_transpose")]
		public mat3 Transpose();
		[CCode (cname = "mat3_det")]
		public float Det();
		[CCode (cname = "mat3_inverse")]
		public mat3 Inverse();
		
		[CCode (cname = "mat3_to_array")]
		public void ToArray(ref float result);
		[CCode (cname = "mat3_print")]
		public void Print();
	}

	[SimpleType, CCode (cname = "mat4")]
	public struct mat4 
	{
		[CCode (cname = "xx")]
		public float M11; 
		[CCode (cname = "xy")]
		public float M12; 
		[CCode (cname = "xz")]
		public float M13;
		[CCode (cname = "xw")]
		public float M14;
		[CCode (cname = "yz")]
		public float M21; 
		[CCode (cname = "yy")]
		public float M22; 
		[CCode (cname = "yz")]
		public float M23;
		[CCode (cname = "yw")]
		public float M24;
		[CCode (cname = "zx")]
		public float M31; 
		[CCode (cname = "zy")]
		public float M32; 
		[CCode (cname = "zz")]
		public float M33;
		[CCode (cname = "zw")]
		public float M34;
		[CCode (cname = "wx")]
		public float M41; 
		[CCode (cname = "wy")]
		public float M42; 
		[CCode (cname = "wz")]
		public float M43;
		[CCode (cname = "ww")]
		public float M44;
		
		[CCode (cname = "mat4_new")]
		public mat4 (float m11, float m12, float m13, float m14,
					float m21, float m22, float m23, float m24,
					float m31, float m32, float m33, float m34,
					float m41, float m42, float m43, float m44);

		[CCode (cname = "mat4_id")]
		public static mat4 Identity();
		[CCode (cname = "mat4_zero")]
		public static mat4 Zero();

		[CCode (cname = "mat4_at")]
		public float At(int i, int j);
		[CCode (cname = "mat4_set")]
		public mat4 Set(int x, int y, float v);
		[CCode (cname = "mat4_transpose")]
		public mat4 Transpose();
		
		[CCode (cname = "mat4_mul_mat4")]
		public mat4 Multiply(mat4 other);
		
		[CCode (cname = "mat4_mul_vec4")]
		public vec4 MulVec4(vec4 v);
		[CCode (cname = "mat4_mul_vec3")]
		public vec3 MulVec3(vec3 v);
		
		[CCode (cname = "mat4_det")]
		public float Det();
		[CCode (cname = "mat4_inverse")]
		public mat4 Invert();
		
		[CCode (cname = "mat3_to_mat4")]
		public static mat4 mat3Tomat4(mat3 m);
		[CCode (cname = "mat4_to_mat3")]
		public mat3 Tomat3();
		[CCode (cname = "mat4_to_quat")]
		public quat Toquat();
		[CCode (cname = "mat4_to_quat_dual")]
		public dquat Todquat();
		
		[CCode (cname = "mat4_to_array")]
		public void ToArray(ref float result);
		[CCode (cname = "mat4_to_array_trans")]
		public void ToArrayTrans(ref float result);
		
		[CCode (cname = "mat4_print")]
		public void Print();
		
		[CCode (cname = "mat4_translation")]
		public static mat4 Translation(vec3 v);
		[CCode (cname = "mat4_scale")]
		public static mat4 Scale(vec3 v);

		[CCode (cname = "mat4_rotate")]
		public mat4 Rotate(float a);
		[CCode (cname = "mat4_translate")]
		public mat4 Translate(vec3 v);
	
		[CCode (cname = "mat4_rotation_x")]
		public static mat4 RotationX(float a);
		[CCode (cname = "mat4_rotation_y")]
		public static mat4 RotationY(float a);
		[CCode (cname = "mat4_rotation_z")]
		public static mat4 RotationZ(float a);
		[CCode (cname = "mat4_rotation_axis_angle")]
		public static mat4 RotationAxisAngle(vec3 axis, float angle);
		
		[CCode (cname = "mat4_rotation_euler")]
		public static mat4 RotationEuler(float x, float y, float z);
		[CCode (cname = "mat4_rotation_quat")]
		public static mat4 Rotation(quat q);
		[CCode (cname = "mat4_rotation_quat_dual")]
		public static mat4 RotationDual(dquat q);
		
		[CCode (cname = "mat4_view_look_at")]
		public static mat4 ViewLookAt(vec3 position, vec3 target, vec3 up);
		[CCode (cname = "mat4_perspective")]
		public static mat4 Perspective(float fov, float near_clip, float far_clip, float ratio);
		[CCode (cname = "mat4_orthographic")]
		public static mat4 Orthographic(float left, float right, float bottom, float top, float near, float far);
		
		[CCode (cname = "mat4_world")]
		public static mat4 World(vec3 position, vec3 scale, quat rotation);
		
		[CCode (cname = "mat4_lerp")]
		public mat4 Lerp(mat4 other, float amount);
		[CCode (cname = "mat4_smoothstep")]
		public mat4 SmoothStep(mat4 other, float amount);
															
	}
}
